# draft

./: CMakeLists.txt  README.md  action.cpp  action.h  comment.cpp  comment.h  comment_manager.cpp  comment_manager.h  genre.cpp  genre.h  main.cpp  movie.cpp  movie.h  movie_interface.h  movie_repository.cpp  movie_repository.h  movie_service.cpp  movie_service.h  movie_ui.cpp  movie_ui.h  romance.cpp  romance.h  sciFi.h  sciFy.cpp  sciFy.h  terminal_interface.cpp  terminal_interface.h  thriller.cpp  thriller.h  user.cpp  user.h  user_manager.cpp  user_manager.h
